--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -20,3 +20,10 @@
     font-size: 72px;
     margin-top: 50px;
 }
+
+.badge-notify{
+   background-color:red;
+   position:relative;
+   top: -20px;
+   left: -5px;
+}
