--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -18,6 +18,21 @@
   font-size: 72px;
   margin-top: 50px; }
 
+section {
+  margin: 0 20px; }
+
+.navbar-nav li.loader {
+  margin: 12px 24px 0 6px; }
+
+.page-host {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50px;
+  bottom: 0;
+  overflow-x: hidden;
+  overflow-y: auto; }
+
 .desktop-icon-notify {
   background-color: red;
   position: absolute;
