--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -26,10 +26,10 @@ section {
 
 .page-host {
   position: absolute;
-  left: 0;
-  right: 0;
+  left: 0px;
+  right: 0px;
   top: 50px;
-  bottom: 0;
+  bottom: 40px;
   overflow-x: hidden;
   overflow-y: auto; }
 
